* (1089) Extended MSVC build system to enable use of SSE3 and SSE4 intrinsics.
* (1090) Replaced Maths::VectorArray with Maths::Array and Maths::Matrix. Also
fixed some silly SSE3 and SSE4 compilation errors :( Disabled global memory
allocator replacement on Mac OS X as the 10.5 system allocator is faster in
every way. Added aligned memory allocation plus aligned_allocator<> STL allocator.
+ (1091) Added VIEWER_NICEST and VIEWER_LEFTZOOMS options to FXGLViewer
+ (1092) Moved all the OpenGL FOX code into the graphing module. Added FXGLCircle.
+ (1093) Added FOX FXVecXX and FXMatXX interoperability to Maths::Vector and
Maths::Matrix. SSE but non-SSE3 sum() now runs much faster, and Maths::Matrix<float,4>
multiply is several times faster than FOX's FXMat4f.
* (1094-1117) Much work invested into nedmalloc which can now patch itself in to
replace the system allocator.
+ (1142) Added FXProcess::processMemoryUsage()
* (xxxx) Ripped out much of the former allocator support code now that nedmalloc
can patch itself in instead of the system allocator. 
* (xxxx) Added Maths::Vector support to QHostAddress in order to speed IP compares.
* (xxxx) Added a dispatch upcall to the QThreadPool. Also significantly reworked
its implementation.

v0.88.1 31st October 2008:
-=-=-=-=-=-=-=-=-=-=-=-=-=
T (svnr) description
B (1080) TnFXSQLDBIPCMsgsI::ColumnData was being used inside a vector<> when
it has move only semantics
B (1081) QFileInfo::baseName() was returning one character too few. Thanks to CK
for reporting this.
B (1082) Copied fix from recent dlmalloc into nedmalloc - under high load bit
pinning was being corrupted on multiprocessor machines

+ (1080) Fixed implementation of move semantics for C++0x compilers. Added move
semantics to all container classes in TnFOX
* (1083) Initial set of fixes for Apple Mac OS X 10.5 support
* (1084) Full port to Mac OS X 10.5
* (1085) Merged FOX v1.6.34

v0.88 13th June 2008:
-=-=-=-=-=-=-=-=-=-=-
T (svnr) description